<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="add_item">Add item</string>
    <string name="show_subtitle">SHOW SUBTITLE</string>
    <string name="enter_crime_title">Enter crime title</string>
    <string name="creation_date">Creation date</string>
    <string name="creation_date_plus">Creation date: 1%s$</string>
    <string name="details_plus">Details:\t</string>
    <string name="crime_text">Crime</string>
    <string name="crime_title">Crime Title</string>
    <string name="solved">Solved</string>
    <string name="crimes_list">Crimes List</string>
    <string name="create_crime">Create Crime</string>
    <string name="crime_description">Crime Description</string>
    <string name="enter_crime_description">Enter crime description</string>
    <string name="image_settb">image settb</string>
    <string name="suspect_name">Suspect Name</string>
    <string name="enter_suspect_name">Enter suspect name</string>
    <string name="list">List</string>
    <string name="msg_crime_created">Crime created!</string>
    <string name="msg_crime_updated">Crime updated!</string>
    <string name="msg_crime_removed">Crime removed!</string>
    <string name="update">Update</string>
    <string name="remove_crime">Remove crime</string>
    <string name="remove_menu_item">Remove</string>
    <string name="storage_permission_needed">Storage permission needed</string>
    <string name="request_permission">Request permission</string>
    <string name="err">Error</string>
    <string name="io_err">Database error</string>
    <string name="crime_details">Crime Detail</string>
    <string name="no_data">No data</string>
    <string name="error">Error</string>
</resources>